force-app/main/default/objects/WorkBadge/WorkBadge.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>