force-app/main/default/objects/WorkBadge/fields/ilms__Impact_Book__c.field-meta.xml
<CustomField>
    <fullName>ilms__Impact_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Impact_Book</label>
    <referenceTo>ilms__Book__c</referenceTo>
    <relationshipLabel>BookBadgesReceived</relationshipLabel>
    <relationshipName>BookBadgesReceived</relationshipName>
    <type>Lookup</type>
</CustomField>