force-app/main/default/objects/WorkBadge/fields/ilms__Impact_Speciality__c.field-meta.xml
<CustomField>
    <fullName>ilms__Impact_Speciality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Impact Speciality</label>
    <referenceTo>ilms__Speciality__c</referenceTo>
    <relationshipLabel>SpecialityBadgesReceived</relationshipLabel>
    <relationshipName>SpecialityBadgesReceived</relationshipName>
    <type>Lookup</type>
</CustomField>