force-app/main/default/objects/WorkBadge/fields/ilms__Is_Impact__c.field-meta.xml
<CustomField>
    <fullName>ilms__Is_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Impact</label>
    <type>Checkbox</type>
</CustomField>